--- a/circle.yml
+++ b/circle.yml
@@ -4,9 +4,8 @@ machine:
 
 dependencies:
   override:
-    - export TAG=0.0.$CIRCLE_BUILD_NUM
     - docker build -t rzachariah/hellofitbit .
-    - docker tag rzachariah/hellofitbit rzachariah/hellofitbit:$TAG
+    - docker tag rzachariah/hellofitbit rzachariah/hellofitbit:0.0.$CIRCLE_BUILD_NUM
 
 test:
   override:
@@ -19,4 +18,4 @@ deployment:
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push rzachariah/hellofitbit
-      - docker push rzachariah/hellofitbit:$TAG
+      - docker push rzachariah/hellofitbit:0.0.$CIRCLE_BUILD_NUM
