--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
 dependencies:
   override:
     - docker build -t rzachariah/hellofitbit .
-    - docker tag rzachariah/hellofitbit rzachariah/hellofitbit:0.0.$CIRCLE_BUILD_NUM
+    - docker tag rzachariah/hellofitbit rzachariah/hellofitbit:$TAG
 
 test:
   override:
@@ -18,4 +18,4 @@ deployment:
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push rzachariah/hellofitbit
-      - docker push rzachariah/hellofitbit:0.0.$CIRCLE_BUILD_NUM
+      - docker push rzachariah/hellofitbit:$TAG
